Add wonder data using local storage from page to page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     
 
     <div id="wonders" class="wonders"></div>
+    <footer class="info footer flex align-items-center align-content-center flex-wrap justify-content-center">
+        <h3>Copyright 2024 © worldwonders.com</h3>
+    </footer>
+
     <script src="./js/axios.js"></script>
 </body>
 </html>
